--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
            steps {
            withSonarQubeEnv('sonarqube') {
            sh '''
-           mvn clean package org.jacoco:jacoco-maven-plugin:prepare-agent install -Dmaven.test.failure.ignore=false
+           mvn clean package org.jacoco:jacoco-maven-plugin:prepare-agent install -Dmaven.test.failure.ignore=true
            mvn -e -B sonar:sonar -Dsonar.java.source=1.8 -Dsonar.host.url="${sonar_url}" -Dsonar.login="${sonar_username}" -Dsonar.password="${sonar_password}" -Dsonar.sourceEncoding=UTF-8
            '''
            }
