--- a/jenkinsfile
+++ b/jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
 }
 	   stage ('Publishing Artifact') {
 	steps {
-	nexusArtifactUploader artifactId:'gameoflife1', credentialsId: '5dabee3b-1e23-4c4d-9de5-87d701b2f16b', groupId: 'com.wakaleo.gameoflife', nexusUrl: '172.31.40.170:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'maven-jar', version: '4.0.0'
+	nexusArtifactUploader artifacts: artifactId:'gameoflife1', credentialsId: '5dabee3b-1e23-4c4d-9de5-87d701b2f16b', groupId: 'com.wakaleo.gameoflife', nexusUrl: '172.31.40.170:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'maven-jar', version: '4.0.0'
 	}
       }
     }
