--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,11 @@
 pipeline {
    agent any
+    environment {
+
+      sonar_url = 'http://172.31.40.170:9000/'
+      sonar_username = 'admin'
+      sonar_password = 'admin'
+ }
     tools {
       // Install the Maven version configured as "M3" and add it to the path.
 	  jdk 'java8'
@@ -10,10 +16,10 @@ pipeline {
    {
    stage('git clone') {
          steps {
-        git 'https://github.com/Pudirohith/game-of-life1.git'
-        }
-        
-        }
+            // Get some code from a GitHub repository
+            git 'https://github.com/Pudirohith/game-of-life1.git'
+        }  
+      }
 	stage ('Compile and Build') {
          steps {
            sh 'mvn clean install -U  -Dmaven.test.skip=true'
@@ -21,16 +27,19 @@ pipeline {
 	}
   stage ('Sonarqube Analysis'){
            steps {
-          withSonarQubeEnv(sonarqube){
-	 sh 'mvn -e -B sonar:sonar -Dsonar.java.source=1.8 -Dsonar.host.url="172.31.40.170:9000" -Dsonar.login="admin" -Dsonar.password="admin" -Dsonar.sourceEncoding=UTF-8'
-    // some block
+           withSonarQubeEnv('sonarqube') {
+           sh '''
+	   mvn clean package org.jacoco:jacoco-maven-plugin:prepare-agent install -Dmaven.test.failure.ignore=false
+           mvn -e -B sonar:sonar -Dsonar.java.source=1.8 -Dsonar.host.url="${sonar_url}" -Dsonar.login="${sonar_username}" -Dsonar.password="${sonar_password}" -Dsonar.sourceEncoding=UTF-8
+           '''
+           }
          }
-    }
-}
-	   stage ('Publishing Artifact') {
-	steps {
-	nexusArtifactUploader artifacts: artifactId:'gameoflife1', credentialsId: '5dabee3b-1e23-4c4d-9de5-87d701b2f16b', groupId: 'com.wakaleo.gameoflife', nexusUrl: '172.31.40.170:8081', nexusVersion: 'nexus3', protocol: 'http', repository: 'maven-jar', version: '4.0.0'
-	}
       }
-    }
+      stage ('Publishing Artifact') {
+	steps {
+	nexusArtifactUploader artifacts: [[artifactId:'gameoflife1', classifier: '', file: '/var/lib/jenkins/workspace/pipeline-job/gameoflife-build/target/gameoflife-build-1.0-SNAPSHOT.jar', type:'jar', type: 'jar']], credentialsId: '5dabee3b-1e23-4c4d-9de5-87d701b2f16b', groupId: 'com.wakaleo.gameoflife', nexusUrl: '172.31.40.170:8081/', nexusVersion: 'nexus3', protocol: 'http', repository: 'maven-jar', version: '4.0.0'
+           archiveArtifacts '**/*.jar'
+	}
+     }
   }
+}
