--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,8 +45,7 @@ pipeline {
       agent any
       steps {
         sh '''
-	cd ${WORKSPACE}
-	docker build -t pudirohith/game1.0:v1 .
+	docker build -t pudirohith/game1.0:v1 /var/lib/jenkins/workspace/Test-pipeline/
 	'''
       }
     }
