--- a/jenkinsfile
+++ b/jenkinsfile
@@ -53,6 +53,7 @@ pipeline {
       agent any
       steps {
         sh '''
+	docker login -u="pudirohith" -p="sietkmech3"
 	docker push pudirohith/game1.0:v1
 	'''
       }
