--- a/jenkinsfile
+++ b/jenkinsfile
@@ -53,9 +53,9 @@ pipeline {
       agent any
       steps {
         sh '''
-	docker login -u="pudirohith" -p="sietkmech3"
-	docker push pudirohith/game1.0:v1
-	'''
+	docker.withRegistry("https://hub.docker.com/r/pudirohith/game1.0", '5b0f192e-d15d-4a20-84e6-30fa1c4ca53a'){
+           docker push pudirohith/game1.0:v1}
+	   '''
       }
     }
   }
