--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,6 +5,9 @@ pipeline {
       sonar_url = 'http://172.31.85.107:9000/'
       sonar_username = 'admin'
       sonar_password = 'admin'
+       registry = "https://hub.docker.com/r/pudirohith/game1.0"
+        registryCredential = '5b0f192e-d15d-4a20-84e6-30fa1c4ca53a'
+	dockerImage = ''
  }
     tools {
       // Install the Maven version configured as "M3" and add it to the path.
@@ -50,13 +53,12 @@ pipeline {
       }
     }
     stage('Docker publish') {
-      agent any
-      steps {
-        sh '''
-	docker.withRegistry("https://hub.docker.com/r/pudirohith/game1.0", '5b0f192e-d15d-4a20-84e6-30fa1c4ca53a'){
-           docker push pudirohith/game1.0:v1}
-	   '''
-      }
-    }
+     steps { 
+                script { 
+                    docker.withRegistry( '', registryCredential ) { 
+                    docker push pudirohith/game1.0:v1
+                    }
+                }
+            }
   }
 }
