--- a/jenkinsfile
+++ b/jenkinsfile
@@ -54,9 +54,8 @@ pipeline {
     stage('Docker publish') {
      steps { 
                 script { 
-                    docker.withRegistry( '', registryCredential ) { 
-                    docker push (pudirohith/game1.0:v1)
-		  }
+                    docker.withRegistry( '', registryCredential ) {
+                    docker push {pudirohith/game1.0:v1} }
 		}
                }
           }
