--- a/jenkinsfile
+++ b/jenkinsfile
@@ -53,10 +53,11 @@ pipeline {
     }
     stage('Docker publish') {
      steps { 
-                script { 
                     docker.withRegistry( '', registryCredential ) {
-                    docker push pudirohith/game1.0:v1 }
-		}
+		    sh '''
+		    docker push pudirohith/game1.0:v1 
+		    '''
+		    }
                }
           }
   }
