--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
       sonar_url = 'http://172.31.85.107:9000/'
       sonar_username = 'admin'
       sonar_password = 'admin'
-       registry = "https://hub.docker.com/r/pudirohith/game1.0"
+       registry = "https://hub.docker.com/r/pudirohith/game:v2"
         registryCredential = '5b0f192e-d15d-4a20-84e6-30fa1c4ca53a'
  }
     tools {
@@ -55,7 +55,7 @@ pipeline {
      steps { 
            stage{
                     docker.withRegistry( '', registryCredential ) {
-		    docker push { pudirohith/game1.0:v1 } 
+		    docker push { pudirohith/game:v2 } 
 		    }
 		  }
                }
