--- a/jenkinsfile
+++ b/jenkinsfile
@@ -55,7 +55,7 @@ pipeline {
      steps { 
            stage{
                     docker.withRegistry( '', registryCredential ) {
-		    docker push { pudirohith/game:v2 } 
+		    docker push (pudirohith/game:v2) 
 		    }
 		  }
                }
