--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,9 +5,9 @@ pipeline {
       sonar_url = 'http://172.31.85.107:9000/'
       sonar_username = 'admin'
       sonar_password = 'admin'
-        registry = "https://hub.docker.com/repository/docker/pudirohith/game"
+        registry = "https://hub.docker.com/repository/docker/pudirohith/game1.0"
         registryCredential = '5b0f192e-d15d-4a20-84e6-30fa1c4ca53a'
-	dockerImage = 'pudirohith/game:v2'
+	dockerImage = 'pudirohith/game1.0:v2'
  }
     tools {
       // Install the Maven version configured as "M3" and add it to the path.
@@ -55,7 +55,7 @@ pipeline {
     stage('Docker publish') {
     steps {
        script { 
-               docker.withRegistry( 'https://hub.docker.com/repository/docker/pudirohith/game', registryCredential ) {
+               docker.withRegistry( 'https://hub.docker.com/repository/docker/pudirohith/game1.0', registryCredential ) {
                         dockerImage.push()
                     }
                 } 
