--- a/jenkinsfile
+++ b/jenkinsfile
@@ -55,7 +55,7 @@ pipeline {
     stage('Docker publish') {
     steps {
        script { 
-               docker.withRegistry( '', registryCredential ) {
+               docker.withRegistry( 'https://hub.docker.com/repository/docker/pudirohith/game1.0', registryCredential ) {
                         dockerImage.push()
                     }
                 } 
