--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
       sonar_url = 'http://172.31.85.107:9000/'
       sonar_username = 'admin'
       sonar_password = 'admin'
-        registry = "https://hub.docker.com/repository/docker/pudirohith/game1.0"
+        registry = "https://hub.docker.com/v2/"
         registryCredential = '5b0f192e-d15d-4a20-84e6-30fa1c4ca53a'
 	dockerImage = 'pudirohith/game1.0:v1'
  }
@@ -55,7 +55,7 @@ pipeline {
     stage('Docker publish') {
     steps {
        script { 
-               docker.withRegistry( 'https://hub.docker.com/repository/docker/pudirohith/game1.0', registryCredential ) {
+               docker.withRegistry( 'https://hub.docker.com/v2/', registryCredential ) {
                         dockerImage.push()
                     }
                 } 
