--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,9 +5,6 @@ pipeline {
       sonar_url = 'http://172.31.85.107:9000/'
       sonar_username = 'admin'
       sonar_password = 'admin'
-        registry = "https://hub.docker.com/repository/docker/pudirohith/game1.0"
-        registryCredential = 'de878e7e-a859-475b-9d41-accd6c781854'
-	dockerImage = 'pudirohith/game1.0:v1'
  }
     tools {
       // Install the Maven version configured as "M3" and add it to the path.
@@ -54,12 +51,10 @@ pipeline {
     }
     stage('Docker publish') {
     steps {
-      script { 
-               docker.withRegistry('https://hub.docker.com', registryCredential ) {
-                        dockerImage.push()
-                    }
-                } 
-	}
+        withDockerRegistry([ credentialsId: "de878e7e-a859-475b-9d41-accd6c781854", url: "https://hub.docker.com/" ]) {
+          sh 'docker push pudirohith/game1.0:v1 '
+        }
+      }
           }
      }
 }
