--- a/jenkinsfile
+++ b/jenkinsfile
@@ -52,7 +52,7 @@ pipeline {
     stage('Docker publish') {
     steps {
     script {
-        withDockerRegistry([ credentialsId: "de878e7e-a859-475b-9d41-accd6c781854", url: "https://registry.hub.docker.com/" ]) {
+        withDockerRegistry([ credentialsId: "de878e7e-a859-475b-9d41-accd6c781854", url: "https://docker.io/" ]) {
           sh 'docker push docker.io/pudirohith/game1.0:v1 '
 	  }
         }
