--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
       agent any
       steps {
         sh '''
-	docker build -t pudirohith/game1.0:v2 /var/lib/jenkins/workspace/Test-pipeline/
+	docker build -t pudirohith/game:v1 /var/lib/jenkins/workspace/Test-pipeline/
 	'''
       }
     }
@@ -53,7 +53,7 @@ pipeline {
     steps {
     script {
         withDockerRegistry([ credentialsId: "de878e7e-a859-475b-9d41-accd6c781854", url: "https://docker.io/" ]) {
-          sh 'docker push docker.io/pudirohith/game1.0:v2'
+          sh 'docker push docker.io/pudirohith/game:v1'
 	  }
         }
       }
