--- a/jenkinsfile
+++ b/jenkinsfile
@@ -55,7 +55,8 @@ pipeline {
         withDockerRegistry([ credentialsId: "de878e7e-a859-475b-9d41-accd6c781854", url: "https://docker.io/" ]) {
          sh '''
 	 docker tag pudirohith/game1.0:v1 pudirohith/game:v1
-	 docker push docker.io/pudirohith/game:v1'
+	 docker push docker.io/pudirohith/game:v1
+	 '''
 	  }
         }
       }
