--- a/jenkinsfile
+++ b/jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
       sonar_url = 'http://172.31.85.107:9000/'
       sonar_username = 'admin'
       sonar_password = 'admin'
-        registry = "https://hub.docker.com/repository/docker/pudirohith/game1.0"
+        registry = "https://docker.io/"
         registryCredential = 'de878e7e-a859-475b-9d41-accd6c781854'
 	dockerImage = 'pudirohith/game1.0:v1'
  }
@@ -54,11 +54,12 @@ pipeline {
     }
     stage('Docker publish') {
     steps {
-      sh '''
-      docker login -u="pudirohith" -p="sietkmech3"
-      docker push pudirohith/game1.0:v1
-        '''
+     script { 
+               docker.withRegistry('', registryCredential ) {
+                        dockerImage.push()
+                    }
+                } 
+               }
 	}
-          }
      }
 }
