--- a/jenkinsfile
+++ b/jenkinsfile
@@ -60,5 +60,18 @@ pipeline {
         '''
 	}
           }
+	   stage ('Deploy to kubernetes'){
+        steps{
+          script {
+
+            sh "kubectl config use-context gke_fluent-service-325915_us-central1-a_cluster-1"
+		       // sh "export PATH=/home/jenkins/:$PATH"
+			      sh "cd ${WORKSPACE}"
+		  	    //  sh "kubectl delete -f '${WORKSPACE}'/kube/deployment.yml"
+			      sh "kubectl create -f '${WORKSPACE}'/kube/service.yml"
+			      sh "kubectl create -f '${WORKSPACE}'/kube/deployment.yml"
+
+            }
+       }
      }
 }
